Added new settings class for PDA.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -45,6 +45,18 @@
   </startup>
   <userSettings>
     <CakeExtractor.SeleniumApplication.Properties.VcdSettings>
+      <setting name="AccountId" serializeAs="String">
+        <value>1437</value>
+      </setting>
+      <setting name="AmazonVendorGroupId" serializeAs="String">
+        <value>797780</value>
+      </setting>
+      <setting name="AmazonMcId" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="CookiesDirectory" serializeAs="String">
+        <value>E:\\vcdCookies</value>
+      </setting>
       <setting name="DaysInterval" serializeAs="String">
         <value>30</value>
       </setting>
@@ -57,15 +69,6 @@
       <setting name="CookiesDirectoryPath" serializeAs="String">
         <value>VcdCookies</value>
       </setting>
-      <setting name="AccountId" serializeAs="String">
-        <value>1437</value>
-      </setting>
-      <setting name="AmazonVendorGroupId" serializeAs="String">
-        <value>797780</value>
-      </setting>
-      <setting name="AmazonMcId" serializeAs="String">
-        <value>0</value>
-      </setting>
     </CakeExtractor.SeleniumApplication.Properties.VcdSettings>
     <CakeExtractor.SeleniumApplication.Properties.Settings>
       <setting name="SignInPageUrl" serializeAs="String">
@@ -73,12 +76,6 @@
       </setting>
       <setting name="CampaignsPageUrl" serializeAs="String">
         <value>https://advertising.amazon.com/cm/campaigns</value>
-      </setting>
-      <setting name="EMail" serializeAs="String">
-        <value>email</value>
-      </setting>
-      <setting name="EMailPassword" serializeAs="String">
-        <value>password</value>
       </setting>
       <setting name="DownloadsDirectoryName" serializeAs="String">
         <value>WebDriverDownloads</value>
@@ -106,6 +103,12 @@
       </setting>
       <setting name="FromDatabase" serializeAs="String">
         <value>False</value>
+      </setting>
+      <setting name="EMail" serializeAs="String">
+        <value>email</value>
+      </setting>
+      <setting name="EMailPassword" serializeAs="String">
+        <value>password</value>
       </setting>
     </CakeExtractor.SeleniumApplication.Properties.Settings>
   </userSettings>
