--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/VcdSettings.settings
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/VcdSettings.settings
@@ -2,15 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CakeExtractor.SeleniumApplication.Properties" GeneratedClassName="VcdSettings">
   <Profiles />
   <Settings>
-    <Setting Name="DaysInterval" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">1</Value>
-    </Setting>
-    <Setting Name="StartDate" Type="System.DateTime" Scope="User">
-      <Value Profile="(Default)">2019-01-10</Value>
-    </Setting>
-    <Setting Name="EndDate" Type="System.DateTime" Scope="User">
-      <Value Profile="(Default)">2019-01-10</Value>
-    </Setting>
     <Setting Name="AccountId" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1437</Value>
     </Setting>
@@ -22,6 +13,18 @@
     </Setting>
     <Setting Name="CookiesDirectory" Type="System.String" Scope="User">
       <Value Profile="(Default)">E:\\vcdCookies</Value>
+    </Setting>
+    <Setting Name="DaysInterval" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">30</Value>
+    </Setting>
+    <Setting Name="StartDate" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="EndDate" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="CookiesDirectoryPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">VcdCookies</Value>
     </Setting>
   </Settings>
 </SettingsFile>
