--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -3,6 +3,7 @@
   <configSections>
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="CakeExtractor.SeleniumApplication.Properties.PdaSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="CakeExtractor.SeleniumApplication.Properties.VcdSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="CakeExtractor.SeleniumApplication.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
@@ -44,6 +45,32 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <userSettings>
+    <CakeExtractor.SeleniumApplication.Properties.PdaSettings>
+      <setting name="CampaignsPageUrl" serializeAs="String">
+        <value>https://advertising.amazon.com/cm/campaigns</value>
+      </setting>
+      <setting name="DownloadsDirectoryName" serializeAs="String">
+        <value>WebDriverDownloads</value>
+      </setting>
+      <setting name="FilesNameTemplate" serializeAs="String">
+        <value>*.csv</value>
+      </setting>
+      <setting name="DaysAgo" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="StartDate" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="EndDate" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="CookiesDirectory" serializeAs="String">
+        <value>Cookies</value>
+      </setting>
+      <setting name="FromDatabase" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </CakeExtractor.SeleniumApplication.Properties.PdaSettings>
     <CakeExtractor.SeleniumApplication.Properties.VcdSettings>
       <setting name="AccountId" serializeAs="String">
         <value>1437</value>
@@ -74,15 +101,6 @@
       <setting name="SignInPageUrl" serializeAs="String">
         <value>https://advertising.amazon.com/sign-in</value>
       </setting>
-      <setting name="CampaignsPageUrl" serializeAs="String">
-        <value>https://advertising.amazon.com/cm/campaigns</value>
-      </setting>
-      <setting name="DownloadsDirectoryName" serializeAs="String">
-        <value>WebDriverDownloads</value>
-      </setting>
-      <setting name="FilesNameTemplate" serializeAs="String">
-        <value>*.csv</value>
-      </setting>
       <setting name="WaitPageTimeoutInMinuts" serializeAs="String">
         <value>30</value>
       </setting>
@@ -91,18 +109,6 @@
       </setting>
       <setting name="ExtractionIntervalsInDays" serializeAs="String">
         <value>1</value>
-      </setting>
-      <setting name="StartDate" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="EndDate" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="CookiesDirectory" serializeAs="String">
-        <value>Cookies</value>
-      </setting>
-      <setting name="FromDatabase" serializeAs="String">
-        <value>False</value>
       </setting>
       <setting name="EMail" serializeAs="String">
         <value>email</value>
