Added parameter "CommandsToScheduler", which is controlled by the commands that will be executed.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/Settings.settings
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="EMailPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)">password</Value>
     </Setting>
+    <Setting Name="CommandsToScheduler" Type="System.String" Scope="User">
+      <Value Profile="(Default)">SyncAmazonPdaCommand|SyncAmazonVcdCommand</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
