--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -116,6 +116,9 @@
       <setting name="EMailPassword" serializeAs="String">
         <value>password</value>
       </setting>
+      <setting name="CommandsToScheduler" serializeAs="String">
+        <value>SyncAmazonPdaCommand|SyncAmazonVcdCommand</value>
+      </setting>
     </CakeExtractor.SeleniumApplication.Properties.Settings>
   </userSettings>
   <runtime>
