--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -105,7 +105,7 @@
         <value>30</value>
       </setting>
       <setting name="StartExtractionDateTime" serializeAs="String">
-        <value>2018-11-23</value>
+        <value />
       </setting>
       <setting name="ExtractionIntervalsInDays" serializeAs="String">
         <value>1</value>
