Save default paths for report folders for production to a configuration.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -65,7 +65,7 @@
     <add key="AmazonAuthCode" value="ANnhMugiYCuDlSyoEKdJ" />
     <!--<add key="AmazonAuthCode" value="ANyvcToCyYtvRsPgWwaR" />--><!-- granted access to ronnie's account -->
     <add key="AmazonRefreshToken" value="" />
-    <add key="AmazonReportsBaseFolder" value="C:\DirectAgents\daSynchAmazonStats\Reports" />
+    <add key="AmazonReportsBaseFolder" value="C:\Reports\Amazon\Reports" />
     <add key="Amazon_Alt1" value="3697485300977692" /><!-- AvoDerm -->
     <add key="AmazonAuthCode_Alt1" value="ANIxnrbjMDzBPhYGvHwx" /><!-- granted access to brendan's account -->
     <add key="Amazon_Alt2" value="506658790463709,2809006642760398" /><!-- Carhartt Sportswear - Mens, Carhartt Women's Collection -->
@@ -87,7 +87,7 @@
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
 
-    <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
+    <add key="AdWordsReportFilePath" value="C:\Reports\Adwords\adwordsrep.xml" />
     <!--<add key="AdWordsReportFilePath" value="d:\local\adwordsrep.xml"/>--><!-- azure -->
 
     <add key="BingCustomerID" value="234647" />
@@ -101,7 +101,7 @@
     <add key="BingApiUsername123" value=""/>
     <add key="BingApiPassword123" value=""/>-->
     <add key="BingRedirectionUri" value="https://login.live.com/oauth20_desktop.srf" />
-    <add key="BingReportFolder" value="C:\Downloads" />
+    <add key="BingReportFolder" value="C:\Reports\Bing" />
     <!--<add key="BingReportFolder" value="d:\local"/>--><!-- azure -->
     <add key="BingReportFilename" value="bingrep.zip" />
 
