--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication.csproj
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Commands\SyncAmazonPdaCommand.cs" />
     <Compile Include="Configuration\Models\AccountInfo.cs" />
     <Compile Include="Configuration\Pda\PdaCommandConfigurationManager.cs" />
+    <Compile Include="Configuration\Pda\VcdAccountsDataProvider.cs" />
     <Compile Include="Configuration\Vcd\VcdCommandConfigurationManager.cs" />
     <Compile Include="Drivers\ChromeWebDriver.cs" />
     <Compile Include="Enums\AmazonCmApiMetrics.cs" />
