--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/Settings.settings
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/Settings.settings
@@ -5,8 +5,14 @@
     <Setting Name="SignInPageUrl" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://advertising.amazon.com/sign-in</Value>
     </Setting>
-    <Setting Name="CampaignsPageUrl" Type="System.String" Scope="User">
-      <Value Profile="(Default)">https://advertising.amazon.com/cm/campaigns</Value>
+    <Setting Name="WaitPageTimeoutInMinuts" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">30</Value>
+    </Setting>
+    <Setting Name="StartExtractionDateTime" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ExtractionIntervalsInDays" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="EMail" Type="System.String" Scope="User">
       <Value Profile="(Default)">email</Value>
@@ -14,35 +20,8 @@
     <Setting Name="EMailPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)">password</Value>
     </Setting>
-    <Setting Name="DownloadsDirectoryName" Type="System.String" Scope="User">
-      <Value Profile="(Default)">WebDriverDownloads</Value>
-    </Setting>
-    <Setting Name="FilesNameTemplate" Type="System.String" Scope="User">
-      <Value Profile="(Default)">*.csv</Value>
-    </Setting>
-    <Setting Name="WaitPageTimeoutInMinuts" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">30</Value>
-    </Setting>
-    <Setting Name="StartExtractionDateTime" Type="System.DateTime" Scope="User">
-      <Value Profile="(Default)">2018-11-23</Value>
-    </Setting>
-    <Setting Name="ExtractionIntervalsInDays" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">1</Value>
-    </Setting>
-    <Setting Name="DaysAgo" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="StartDate" Type="System.DateTime" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="EndDate" Type="System.DateTime" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="CookiesDirectory" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Cookies</Value>
-    </Setting>
-    <Setting Name="FromDatabase" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+    <Setting Name="CommandsToScheduler" Type="System.String" Scope="User">
+      <Value Profile="(Default)">SyncAmazonPdaCommand|SyncAmazonVcdCommand</Value>
     </Setting>
   </Settings>
 </SettingsFile>
