--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -70,6 +70,15 @@
       <setting name="FromDatabase" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="AccountId" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="StatsType" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="DisabledOnly" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CakeExtractor.SeleniumApplication.Properties.PdaSettings>
     <CakeExtractor.SeleniumApplication.Properties.VcdSettings>
       <setting name="AccountId" serializeAs="String">
