--- a/3/API/Amazon/packages.config
+++ b/3/API/Amazon/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AWSSDK.Core" version="3.3.31.6" targetFramework="net461" />
+  <package id="AWSSDK.S3" version="3.3.31.14" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Polly" version="6.1.2" targetFramework="net461" />
   <package id="RestSharp" version="106.3.1" targetFramework="net452" />
