Vcd pda splitting. Fixed pda filter button xpath. Fixed some vcd report downloading (#40)

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -70,6 +70,15 @@
       <setting name="FromDatabase" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="AccountId" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="StatsType" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="DisabledOnly" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CakeExtractor.SeleniumApplication.Properties.PdaSettings>
     <CakeExtractor.SeleniumApplication.Properties.VcdSettings>
       <setting name="AccountId" serializeAs="String">
@@ -85,7 +94,7 @@
         <value />
       </setting>
       <setting name="DaysInterval" serializeAs="String">
-        <value>60</value>
+        <value>30</value>
       </setting>
     </CakeExtractor.SeleniumApplication.Properties.VcdSettings>
     <CakeExtractor.SeleniumApplication.Properties.Settings>
@@ -106,9 +115,6 @@
       </setting>
       <setting name="EMailPassword" serializeAs="String">
         <value>password</value>
-      </setting>
-      <setting name="CommandsToScheduler" serializeAs="String">
-        <value>SyncAmazonPdaCommand|SyncAmazonVcdCommand</value>
       </setting>
     </CakeExtractor.SeleniumApplication.Properties.Settings>
   </userSettings>
