--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -411,6 +411,7 @@
     <Compile Include="Etl\CakeMarketing\Loaders\CPCLoader.cs" />
     <Compile Include="Etl\DSP\Configuration\AmazonDspConfigurationProvider.cs" />
     <Compile Include="Etl\DSP\Extractors\AmazonDspExtractor.cs" />
+    <Compile Include="Etl\DSP\Extractors\Composer\DspReportDataComposer.cs" />
     <Compile Include="Etl\DSP\Extractors\Parser\DspReportCsvParser.cs" />
     <Compile Include="Etl\DSP\Extractors\Parser\Models\CreativeReportRow.cs" />
     <Compile Include="Etl\DSP\Extractors\Parser\ParsingConverters\CreativeReportentityRowMap.cs" />
